--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,18 @@
   background: var(--text-color);
 }
 
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--bg2-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--bg4-color);
+}
+
 * {
   margin: 0;
   padding: 0;
